--- a/assets/cv.html
+++ b/assets/cv.html
@@ -43,7 +43,7 @@
       max-height: 297mm;
       margin: 0 auto;
       background: white;
-      padding: 40px;
+      padding: 35px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
     }
@@ -73,14 +73,15 @@
     h1 {
       font-size: 24px;
       color: #2c3e50;
-      margin-bottom: 10px;
+      margin: auto;
+      margin-bottom: 5px;
       // border-bottom: 3px solid #3498db;
       border-bottom: 2px solid #ecf0f1;
       padding-bottom: 10px;
     }
 
     .contact-info {
-      margin-bottom: 30px;
+      margin-bottom: 15px;
       color: #555;
       font-size: 12px;
     }
@@ -97,10 +98,9 @@
     h2 {
       font-size: 16px;
       color: #2c3e50;
-      margin-top: 30px;
-      margin-bottom: 15px;
+      margin-top: 15px;
+      margin-bottom: 12px;
       border-bottom: 2px solid #ecf0f1;
-      padding-bottom: 8px;
     }
 
     h3 {
@@ -141,7 +141,7 @@
     }
 
     .job-item li {
-      margin-bottom: 5px;
+      margin-bottom: 3px;
       font-size: 12px;
       color: #555;
     }
@@ -175,7 +175,7 @@
     .education-item {
       // border-left: 3px solid #e74c3c;
       padding-left: 15px;
-      margin-bottom: 15px;
+      margin-bottom: 10px;
     }
 
     .education-title {
@@ -189,6 +189,24 @@
       color: #7f8c8d;
       font-style: italic;
     }
+
+    .education-description {
+      font-size: 12px;
+      line-height: 1.5;
+      color: #444;
+      margin-bottom: 10px;
+    }
+
+    .project-item ul {
+      margin: 10px 0;
+      padding-left: 20px;
+    }
+
+    .project-item li {
+      margin-bottom: 3px;
+      font-size: 12px;
+      color: #555;
+    }
   </style>
 </head>
 
@@ -199,21 +217,13 @@
     <header>
       <h1>Leonardo Scoppitto</h1>
       <div class="contact-info">
-        <p>
-          <!-- <strong>Email:</strong>
-                        <a href="mailto:leonardo.scoppitto@gmail.com"
-                            >leonardo.scoppitto@gmail.com</a
-                        > -->
-          <!-- | <strong>Phone:</strong> +39 331 5665792 -->
-        </p>
-        <p>
-          <strong>LinkedIn:</strong>
-          <a href="https://www.linkedin.com/in/leonardo-scoppitto-85bba9199/"
-            target="_blank">linkedin.com/in/leonardo-scoppitto-85bba9199</a>
-          | <strong>GitHub:</strong>
-          <a href="https://github.com/skiby7" target="_blank">github.com/skiby7</a>
-          | <strong>Blog:</strong>
-          <a href="https://skiby7.github.io/" target="_blank">skiby7.github.io</a>
+        <strong>LinkedIn:</strong>
+        <a href="https://www.linkedin.com/in/leonardo-scoppitto-85bba9199/"
+          target="_blank">linkedin.com/in/leonardo-scoppitto-85bba9199</a>
+        | <strong>GitHub:</strong>
+        <a href="https://github.com/skipperoo" target="_blank">github.com/skipperoo</a>
+        | <strong>Blog:</strong>
+        <a href="https://skipperoo.github.io/" target="_blank">skipperoo.github.io</a>
         </p>
       </div>
     </header>
@@ -225,48 +235,51 @@
           Zerynth S.p.A. - Software Engineer
         </h3>
         <div class="job-period">
-          June 2023 – Present, Pisa, Italy
+          June 2023 – Aug 2025, Pisa, Italy
         </div>
-        <p class="job-description">
-        </p>
+        <p class="job-description"></p>
         <ul>
           <li>
-            Developed embedded firmware and automation tools
-            for industrial data acquisition
+            Developed software for embedded devices and
+            automation tools for industrial data acquisition.
           </li>
           <li>
-            Administered and automated Linux-based systems
-            used in edge computing platforms
+            Administered and automated Linux-based systems used
+            in edge computing.
           </li>
           <li>
-            Contributed to full-stack development of
-            cloud-integrated industrial monitoring applications
+            Contributed to full-stack development of industrial
+            monitoring applications.
           </li>
           <li>
             Collaborated across DevOps and R&amp;D teams using
-            Docker, Jenkins, Git, Go, Python, and TypeScript
+            technologies and languages like Docker, Jenkins,
+            Git, Go, Python, and TypeScript.
           </li>
         </ul>
       </div>
 
       <div class="job-item">
-        <h3 class="job-title">BLT - Software &amp; Systems Engineer</h3>
+        <h3 class="job-title">
+          BLT - Software &amp; Systems Engineer
+        </h3>
         <div class="job-period">
           January 2021 – December 2022, Lido di Camaiore, Italy
         </div>
         <p class="job-description">
           Contributed to the development of high-performance
           broadcasting systems used in live sports and
-          entertainment productions worldwide, including Olympics, F1,
-          and World Cups.
+          entertainment productions worldwide, including Olympics,
+          F1, and World Cups.
         </p>
         <ul>
-          <li>Administered Linux servers and hypervisors</li>
+          <li>Administered Linux servers and hypervisors.</li>
           <li>
-            Developed embedded software for broadcast hardware
+            Developed embedded software for broadcast hardware.
           </li>
           <li>
-            Created applications and tooling using C# and the .NET framework
+            Created applications and tooling using C# and the
+            .NET framework.
           </li>
         </ul>
       </div>
@@ -280,10 +293,11 @@
         </div>
         <p class="job-description">
           Contributed to the university's Formula Student racing
-          team (<a href="https://eteamsquadracorse.unipi.it/" target="_blank">E-Team Squadra Corse</a>) as
-          both a technical designer and driver by designing and developing a custom dry sump lubrication
-          system for the Honda CBR600RR engine and by driving the car during both pre-season test and official
-          competitions
+          team (<a href="https://eteamsquadracorse.unipi.it/" target="_blank">E-Team Squadra Corse</a>) as both a
+          technical designer and driver by designing
+          and developing a custom dry sump lubrication system for
+          the Honda CBR600RR engine and by driving the car during
+          both pre-season tests and official competitions.
         </p>
       </div>
 
@@ -296,20 +310,22 @@
         </div>
         <p class="job-description">
           Provide ongoing technical support, infrastructure
-          management, and IT services, for various SMEs in the Pisa metropolitan area.
+          management, and IT services, for various SMEs in the
+          Pisa metropolitan area.
         </p>
       </div>
     </section>
 
     <div class="page-break"></div>
-
     <section>
       <h2>Education</h2>
       <div class="education-item">
         <h3 class="education-title">
-          Master's Degree in Computer Science – University of Pisa
+          Master's Degree in Computer Science (<i>ICT Solutions Architect</i>) – University of Pisa
         </h3>
-        <div class="education-period">In Progress - Expected 2026</div>
+        <div class="education-period">
+          In Progress - Expected 2026
+        </div>
       </div>
       <div class="education-item">
         <h3 class="education-title">
@@ -320,28 +336,54 @@
       </div>
       <div class="education-item">
         <h3 class="education-title">
-          Bachelor's Degree in Aerospace Engineering – University of
-          Pisa
+          Bachelor's Degree in Aerospace Engineering – University
+          of Pisa
         </h3>
-        <div class="education-period">2016 – 2020 (<em>not completed</em>)</div>
+        <div class="education-period">
+          2016 – 2020 (<em>not completed</em>)
+        </div>
       </div>
     </section>
 
     <section>
+      <h2>Projects</h2>
+      <section>
+        <div class="project-item">
+          <ul>
+            <li>
+              FSS - An in-memory cache for storing files
+              received from clients over Unix or TCP sockets.
+              <a href="https://github.com/skipperoo/file-storage-server" target="_blank">Repository</a>.
+            </li>
+            <li>
+              BingoEth - A distributed web3 bingo game on
+              Ethereum with a React-based WebUI.
+              <a href="https://github.com/skipperoo/BingoEth" target="_blank">Repository</a>.
+            </li>
+
+            <li>
+              Trackeroo (<i>wip</i>) - An IoT platform for
+              vehicle data aggregation, built with Go and
+              supported by Redis, TimescaleDB, PostGIS,
+              Grafana, RabbitMQ, and Flink. Includes a beta
+              mobile client and can be deployed both on a
+              single machine using Docker and on a Kubernetes
+              cluster.
+              <a href="https://github.com/skipperoo/sdc-project" target="_blank">Repository</a>.
+            </li>
+          </ul>
+        </div>
+      </section>
       <h2>Technical Skills &amp; Summary</h2>
       <div class="skills-section">
         <div class="skill-category">
           <strong>Programming Languages:</strong>
-          Python, C, Go, C#, Javascript/Typescript
+          Python, C, Go, Java, C#, Javascript/Typescript
         </div>
         <div class="skill-category">
           <strong>Tools &amp; Technologies:</strong>
-          Git, Github and Github Actions, Docker, Jenkins, Linux
-        </div>
-        <div class="skill-category">
-          <strong>Specializations:</strong>
-          Industrial IoT, DevOps, Full-Stack Development,
-          Low-latency Systems
+          Git, Github and Github Actions, Ansible, Docker,
+          Jenkins, Linux
         </div>
       </div>
     </section>
@@ -419,7 +461,6 @@
         printWindow.close();
       }, 500);
     }
-
   </script>
 </body>
 
